--- a/src/presentation.tex
+++ b/src/presentation.tex
@@ -1,4 +1,4 @@
-\documentclass[10pt,xcolor=pdflatex,dvipsnames,table]{beamer}
+\documentclass[aspectratio=169,10pt,xcolor=pdflatex,dvipsnames,table]{beamer}
 \usepackage{newcent}
 \usepackage[utf8]{inputenc}
 \usepackage[czech]{babel}
@@ -45,6 +45,8 @@ imilet@fit.vutbr.cz}
 \begin{document}
 
 \frame[plain]{\titlepage}
+
+\definecolor{bg}{rgb}{0.95,0.95,0.95}
 
 \input{src/shadows}
 \input{src/shadowVolumes}
