--- a/src/shadowMapping.tex
+++ b/src/shadowMapping.tex
@@ -62,7 +62,7 @@
     \frametitle{GLSL}
 
 {\small
-  \begin{minted}[frame=lines]{glsl}
+\begin{minted}[bgcolor=bg]{packages/graphics.py:GLShaderLexer -x}
 //Vertex shader
 in vec4 position;
 out vec4 shadowPos;
