--- a/src/presentation.tex
+++ b/src/presentation.tex
@@ -32,7 +32,7 @@
 
 
 
-\title[OpenGL]{PGR - Stíny, procedurální generování}
+\title[OpenGL]{PGR - Shadows, procedural generation / Stíny, procedurální generování}
 
 \author[]{Tomáš Milet}
 
